data/all_generated_tests/raw_wast_tests/br_if_IncorrectBranchTargetResolution_1409.wast
;; 10. **Test Description**: Set up a `block` containing a nested `if` and `loop`, with a `br_if` targeting the outer `block` based on a condition in `loop`. Validate forward jump to outer block.     - **Constraint Checked**: Ensuring forward jumps correctly resolve outer `block` label.     - **Related Issue**: Confirming that nested loop and if conditions do not mislead outer block targeting.

(assert_invalid
  (module
    (func $nested-block-if-loop
      (block $outer 
        (loop $inner 
          (br_if $outer (i32.const 1))
        )
      )
    )
  )
  "type mismatch"
)